# driftctl

./: BUILD_V1.1.md  Build.md  ESCALATION.md  License  PROGRESS.md  README.md  pyproject.toml
.claude/: settings.json
driftctl/: __init__.py  checkpoint.py  cli.py  drift.py  guard.py  handoff.py  state.py  sync.py  validator.py
driftctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_checkpoint.py  test_drift.py  test_guard.py  test_handoff.py  test_kickoff.py  test_state.py  test_sync.py  test_validator.py
