[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftctl"
version = "0.1.0"
description = "Persistent project state, guardrails, and drift detection for AI coding agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Chamak", email = "chamak.khi@gmail.com" }
]
keywords = ["ai", "agents", "claude", "cursor", "developer-tools", "cli", "state-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click",
    "rich",
    "pydantic",
    "gitpython",
    "pyyaml",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/ckmkjk/driftctl"
Repository = "https://github.com/ckmkjk/driftctl"
"Bug Tracker" = "https://github.com/ckmkjk/driftctl/issues"

[project.scripts]
driftctl = "driftctl.cli:cli"

[tool.setuptools.packages.find]
include = ["driftctl*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
